5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1644_1053.log
== TEST (2019-04-09 12:37:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n=input("nome do patrono: ")
if (n==cervo):
	print(n, "eh patrono do Harry Potter")
else:
	print(n , "nao eh patrono do Harry Potter ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (n==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:37:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n=input("nome do patrono: ")
if (n==cervo):
	print(n, "eh patrono do Harry Potter")
else:
	print(n , "nao eh patrono do Harry Potter ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (n==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:40:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n=input("nome do patrono: ")
if (n==cervo):
	print(n, "eh patrono do Harry Potter")
else:
	print(n , "nao eh patrono do Harry Potter ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (n==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:42:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n=input("nome do patrono: ")
if (n=="cervo"):
	print(n, "eh patrono do Harry Potter")
else:
	print(n , "nao eh patrono do Harry Potter ")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:42:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n=input("nome do patrono: ")
if (n=="cervo"):
	print(n, "eh patrono do Harry Potter")
else:
	print(n , "nao eh patrono do Harry Potter ")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:42:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n=input("nome do patrono: ")
if (n=="cervo"):
	print(n, "eh patrono do Harry Potter")
else:
	print(n , "nao eh patrono do Harry Potter ")
-- EXECUTION TIME:
0.146702
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
